--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "node_modules/@fontsource/montserrat";
 @import "node_modules/@fontsource/inter";
 @import "primeng/resources/primeng.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
 
 @import 'ag-grid-community/styles/ag-grid.css';
 
