apply now image

--- a/src/app/apply-now-flow1/apply-now-flow1.component.html
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.html
@@ -26,7 +26,7 @@
 
     <div (click)="redirect('car-sub')"  *ngFor="let car of carDetails">
 
-        <img class="car-card" src={{car.imgUrl}}>
+        <img class="car-card" src={{techDetailsParameter.image}}>
 
     </div>
 
