--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
 <!-- <app-home-screen></app-home-screen> -->
 <!-- <app-home-car-collec></app-home-car-collec> -->
 <!-- <app-car-subs></app-car-subs> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
 <!-- <app-credit-information></app-credit-information> -->
-<app-approved></app-approved> 
+<!-- <app-approved></app-approved>  -->
     <!-- <app-login></app-login> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-approved></app-approved> -->
