--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -277,7 +277,7 @@
         <img src="../../assets/logos/info-circle.png" style="height:15px; margin-bottom: -8px; margin-right: 10px; margin-left: -12px;">
         <h6 class="redtxt" style="font-size: 14px;">View Benefits</h6>
     </div>
-    <div class="cs-footer-com" (click)="redirect('apply-now-flow-1')">
-        <button href="car-sub-submit" class="btn roadprice">Apply Now</button>
+    <div class="cs-footer-com" (click)="applyNow($event)">
+        <button class="btn roadprice">Apply Now</button>
     </div>
 </div>
