how it works car collection

--- a/src/app/home-screen/home-car-collec/home-car-collec.component.html
+++ b/src/app/home-screen/home-car-collec/home-car-collec.component.html
@@ -143,8 +143,8 @@
                         </div>
                     </div>
                     <button class="btn btn-white"
-                        style="font-weight: bold; border: solid black 1px; border-radius: 20px; margin-top: 10px; font-size: 12px; width: 100%; margin-bottom: 20px;">Buy
-                        Now</button>
+                        style="font-weight: bold; border: solid black 1px; border-radius: 20px; margin-top: 10px; font-size:
+                         12px; width: 100%; margin-bottom: 20px;">Select</button>
                 </div>
             </div>
         </div>
