--- a/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.scss
+++ b/src/app/rm-homepage/rm-car-collec/rm-car-collec.component.scss
@@ -59,7 +59,9 @@
 }
 
 .car-card:hover{
-    border: solid 2.5px rgb(164, 0, 0);
+    border: solid 2.5px #DB2423;
+    box-shadow: 0px 5px 10px 0px rgba(255, 79, 79, 0.5); 
+
 }
 
 .car-card img{
