--- a/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.html
+++ b/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.html
@@ -19,7 +19,7 @@
                 <a class="anchor" (click)="redirect('main-profile')">Profile</a></li>
                 
               <li style="margin-top: 20px;"><img src="..\assets\security-user.png" alt="Icon 1" style="width:20px;height:15px;">
-                <a class="anchor" (click)="redirect('rm-home-page')" >RM Homepage</a></li>
+                <a class="anchor a1" (click)="redirect('rm-home-page')" >RM Homepage</a></li>
               <li style="margin-top: 20px;"><img src="..\assets\Ticket.png" alt="Icon 1" style="width:20px;height:15px;"> <a
                 class="anchor">Messages</a></li>
               <li style="margin-top: 20px;"><img src="..\assets\Document.png" alt="Icon 1" style="width:20px;height:15px;"> <a
