--- a/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
+++ b/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
@@ -12,6 +12,13 @@
     color: white;
     background-color: aqua;
     background-color: white;
+    border-bottom: solid 1px rgb(196, 192, 192);
+    font-size: 17px;
+    font-family: "Montserrat";
+}
+.a1{
+    font-size: 15px;
+    font-family: "Montserrat";
 }
 .notibar, .profilebar{
     display: flex;
