--- a/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
+++ b/src/app/nav-bar-after-home-profile/nav-bar-after-home-profile.component.scss
@@ -52,6 +52,30 @@
     margin-left: -9rem;
     width: 15rem;
 }
+.notibar p{
+    width: 14rem;
+    font-size: 0.8rem !important;
+}
+
+.notification-text{
+margin-left: 1.5rem;
+}
+
+.user-names{
+    text-decoration: none;
+    color: black;
+    font-size: 0.8rem;
+}
+
+.time-ago{
+    // text-align: right;
+    float: right;
+    text-decoration: none;
+    color: black;
+    font-size: 0.6rem;
+    padding-right: 1rem;
+    margin-top: 0.3rem;
+}
 
 .profilebar{
     margin-top: 25px;
