--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -273,7 +273,7 @@
         <h6 class="price">${{techDetailsParameter.price}}</h6>
     </div>
     <div class="cs-footer-com" style="padding-top: 5px;">
-        <h6 class="price" style="font-size: 15px;">Monthly Payment from: $2,200/m</h6>
+        <h6 class="price" style="font-size: 15px;">Monthly Payment from: $  2200/M</h6>
         <img src="../../assets/logos/info-circle.png" style="height:15px; margin-bottom: -8px; margin-right: 10px; margin-left: -12px;">
         <h6 class="redtxt" style="font-size: 14px;">View Benefits</h6>
     </div>
