--- a/src/app/rm-homepage/rm-homepage.component.html
+++ b/src/app/rm-homepage/rm-homepage.component.html
@@ -224,12 +224,7 @@
             <p>Crossover</p>
           </div>
         </div>
-        <div class="col row-data">
-          <div style="text-align: center" class="row-data-inside-div">
-            <img src="..\assets\wagon-red 1.png" alt="nt" />
-            <p>Wagon</p>
-          </div>
-        </div>
+       
         <div class="col row-data">
           <div style="text-align: center" class="row-data-inside-div">
             <img src="..\assets\mpv-red 1.png" alt="nt" />
@@ -257,28 +252,34 @@
             <p>Coup</p>
           </div>
         </div>
-        <div class="col row-data">
+        <!-- <div class="col row-data">
           <div style="text-align: center" class="row-data-inside-div">
             <img src="..\assets\pickup-red 1.png" alt="nt" />
             <p>BMW</p>
           </div>
-        </div>
+        </div> -->
         <div class="col row-data">
           <div style="text-align: center" class="row-data-inside-div">
             <img src="..\assets\sedan-red 1.png" alt="nt" />
             <p>Sedan</p>
           </div>
         </div>
-        <div class="col row-data">
+        <!-- <div class="col row-data">
           <div style="text-align: center" class="row-data-inside-div">
             <img src="..\assets\wagon-red 1 (1).png" alt="nt" />
             <p>Limousine</p>
           </div>
-        </div>
+        </div> -->
         <div class="col row-data">
           <div style="text-align: center" class="row-data-inside-div">
             <img src="..\assets\convertible-red 1.png" alt="nt" />
             <p>Convertible</p>
+          </div>
+        </div>
+        <div class="col row-data">
+          <div style="text-align: center" class="row-data-inside-div">
+            <img src="..\assets\wagon-red 1.png" alt="nt" />
+            <p>Wagon</p>
           </div>
         </div>
         <div class="col row-data">
