--- a/src/app/car-subs/car-subs.component.scss
+++ b/src/app/car-subs/car-subs.component.scss
@@ -229,7 +229,7 @@ img {
   }
   
   .colorWhite {
-    background-color: #f7f8f3;
+    background-color: #ffffff;
     
   }
   
@@ -238,7 +238,7 @@ img {
   }
   
   .colorBlue {
-    background-color: #5a23db !important;
+    background-color: #b61e51 !important;
   }
   
   .colorGrey {
