--- a/src/app/apply-now-flow1/apply-now-flow1.component.html
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.html
@@ -35,21 +35,33 @@
     <div class="package-details">
         <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
 
-        <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current instalment is: per month</b></p>
+        <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current instalment is: $1,420 per month</b></p>
 
-        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance</b></p>
+        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $88,00</b></p>
 
-        <p style="font-family: 'Monts';">Down Payment</p>
+        <p style="font-family: 'Monts';">Down Payment &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $12,000</p>
 
-        <p style="font-family: 'Monts';">Repayment Frequency </p>
+        <p style="font-family: 'Monts';">Repayment Frequency &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Monthly</p>
 
-        <p style="font-family: 'Monts';">APR of</p>
+        <p style="font-family: 'Monts';">APR of &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.9%</p>
 
-        <p style="font-family: 'Monts';">Add on (instalment)</p>
+        <p style="font-family: 'Monts';">Add on (instalment) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$0</p>
 
-        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Instalment is</b></p>
+        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Instalment is &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1,420</b></p>
 
-        <p style="font-family: 'Monts';">Your first payment is</p>
+        <p style="font-family: 'Monts';">Your first payment is &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$14,420</p>
+
+        <p style="font-family: 'Monts'; color: #236AF2;"><b>Your monthly deduction starts from November 2023, every 1st of the month</b></p>
 
     </div>
 
@@ -150,17 +162,38 @@
         <label for="collapsible-head">CUSTOMER DETAILS</label>
 
         <div class="collapsible-data">
-
-            <p class="fname">First Name: John </p>
-            <p class="lname">Last Name: Smith</p>
-            <p class="mname">Middle Name: M</p>
-            <p class="dob">Date of Birth: 01/01/1975</p>
-
-            <!-- <div class="contact-details">
-                <p>Contact Details</p>
-            </div> -->
-
             
+            <div class="data1">
+                <p class="fname">First Name: John </p>
+                <p class="lname">Last Name: Smith</p>
+                <p class="mname">Middle Name: M</p>
+                <p class="dob">Date of Birth: 01/01/1975</p>
+            </div>
+            <div class="contact-details">
+                <p><b>Contact Details</b></p>
+            </div>
+            <div class="data2">
+                <p class="mob">Mobile: (021) 825 234</p>
+                <p class="home">Home: (06) 455 4465</p>
+                <p class="email">Email: johnsmith@hotmail.com</p>
+            </div>
+            <div class="data3">
+                <p class="citizen">Citizenship: New Zealander</p>
+                <p class="resident">Resident Status: Permanent</p>
+            </div>
+            <div class="address-details">
+                <p>Address Details</p>
+            </div>
+            <div class="data4">
+                <p class="street">Street: 144 Willow Walk</p>
+                <p class="city">City: Port Nelson</p>
+                <p class="state">State/Province/Area: Nelson</p>
+            </div>
+            <div class="data5">
+                <p class="country">Country: New Zealand</p>
+                <p class="zipcode">Zip Code: 7010</p>
+                <p class="yearsataddress">Years at Address: 3</p>
+            </div>
         </div>
 
     </div>
@@ -169,17 +202,35 @@
  
 
 <div class="work-details-dropdown">
-
     <div class="collapsible1">
+        <input type="checkbox" id="collapsible1-head">
 
-        <label>WORK DETAILS</label>
+        <label for="collapsible1-head">WORK DETAILS</label>
 
         <div class="collapsible1-data">
-
+            <div class="data6">
+                <p class="employer">Current Employer: Ace Viticulture LTD</p>
+                <p class="yearsatjob">Years at Job: 3</p>
+                <p class="designation">Designation: Manager</p>
+            </div>
+            <div class="data7">
+                <p class="remotework">Remote Work: Yes/No</p>
+            </div>
+            <div class="work-address">
+                <p>Work Address:</p>
+            </div>
+            <div class="data8">
+                <p class="work-street">Street: 107 Parsonage Road</p>
+                <p class="work-city">City: Woodend Beach</p>
+            </div>
+            <div class="data9">
+                <p class="work-state">State/Province/Area: Waimakariri</p>
+                <p class="work-zipcode">Zip Code: 7610</p>
+                <p class="work-country">Country: New Zealand</p>
+            </div>
         </div>
 
     </div>
-
 </div>
 
  
