--- a/src/app/how-it-works/how-it-works.component.html
+++ b/src/app/how-it-works/how-it-works.component.html
@@ -1,6 +1,6 @@
 <!-- <p>how-it-works works!</p> -->
 <div class="container top-navbar">
-    <img src="../assets/home-2.png" alt="home-png">
+    <img routerLink='' src="../assets/home-2.png" alt="home-png">
     <a class="nav-link" aria-current="page" href="#"><b>EN</b><i class="fa-solid fa-angle-down"></i></a>
 </div>
 <div class="part2">
