--- a/src/app/apply-now-flow1/apply-now-flow1.component.html
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.html
@@ -30,7 +30,7 @@
 
     </div>
 
-      <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: UNE0348</b></h5>
+      <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: {{applicationId}}</b></h5>
 
     <div class="package-details">
         <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
@@ -255,7 +255,7 @@
 
  
 
-    <div class="cs-footer-com">
+    <div class="cs-footer-com" (click)="saveProcceed()">
 
  
 
