--- a/src/app/approved/approved.component.html
+++ b/src/app/approved/approved.component.html
@@ -40,7 +40,7 @@
                 <p><b>Condition :</b> 3 Months Bank Statement Required</p>
                 <p><b>Due By :</b> 15/10/2023</p>
                 <p><b>Status :</b> <span
-                        style="background-color: #AFF8B2; border-radius: 10px; padding: 5px 10px; margin-left: 10px;">Approved</span>
+                        style="background-color: #AFF8B2; border-radius: 10px; padding: 5px 10px; margin-left: 10px;">Processed</span>
                 </p>
             </div>
         </div>
