--- a/src/app/forgot/forgot.component.html
+++ b/src/app/forgot/forgot.component.html
@@ -28,9 +28,9 @@
       <div class="container1">
         <div class="did-floating-label-content label-input">
 
-          <input class="did-floating-input " type="text" placeholder="User Name">
+          <input class="did-floating-input " type="text" placeholder="Email">
 
-          <label class="did-floating-label">Name</label>
+          <label class="did-floating-label">Email</label>
 
         </div>
       </div>
